# sl_processor

./: .clang-format  .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  LICENSE  README.md  RTAsm.h  RTParser.h  Register.h  SLArithUnit.cpp  SLArithUnit.h  SLCodeDef.h  SLPGroup.h  SLProcessor.cpp  SLProcessor.h  SLProcessorStructs.h  main.cpp  mem  nnet  run_tests.sh  spec
Assembler/: Alloc.h  CMakeLists.txt  CodeGen.cpp  CodeGen.h  DisAsm.h  Error.cpp  Error.h  ErrorHandler.h  RTParser.cpp  RTParser.h  RTProg.h  Stream.cpp  SymbolMap.cpp  SymbolMap.h  Token.h
Compiler/: Debugger.h  IncludeResolver.h  Simulator.h  SystemControl.h  UartInterface.h  main.cpp
Debugger/: CMakeLists.txt  CommonPrefixTree.h  Debugger.h  DebuggerInterface.h  IncludeResolver.h  Simulator.h  main.cpp
ProcessorAsmTest/: CMakeLists.txt  RTAsmTest.h  tesIfThenElse.cpp  testAssignment.cpp  testEntryFunctionVector.cpp  testFunction.cpp  testIfLogicOperators.cpp  testLoopFast.cpp  testMisc.cpp  testNeuralNetLib.cpp  testOperationBasic.cpp  testOperationsExtended.cpp  testReadQfp32.cpp  testWaitLock.cpp
ProcessorLib/: CMakeLists.txt  SLArithUnit.cpp  SLArithUnit.h  SLProcessor.cpp  SLProcessor.h  stalllllllllllllllllllllll
ProcessorSim/: CMakeLists.txt  SLArithUnit.cpp  SLArithUnit.h  SLProcessor.cpp  spec
ProcessorTest/: CMakeLists.txt  SLProcessorTest.h  main.cpp  testCmp.cpp  testGoto.cpp  testGotoAbs.cpp  testIRS.cpp  testLoad.cpp  testLoop.cpp  testMemXMov.cpp  testMemXOp.cpp  testMov.cpp  testMovMemX.cpp  testNeg.cpp  testOps.cpp  testUnaryOps.cpp
RTAsm/: Alloc.h  BuddyAlloc.cpp  BuddyAlloc.h  CMakeLists.txt  CodeGen.cpp  CodeGen.h  Error.cpp  Error.h  ErrorHandler.h  Operand.h  RTParser.cpp  RTParser.h  RTProg.h  Stream.cpp  Stream.h  SymbolMap.cpp  SymbolMap.h  Token.h
RTAsmTest/: DisAsm.h  Peripherals.h  RTAsmTest.h  main.cpp  nnet_resolved  tesIfThenElse.cpp  testAlloc.cpp  testArrayDecl.cpp  testAssignADx.cpp  testAssignment.cpp  testBuddyAlloc.cpp  testFunction.cpp  testFunctionBehav.cpp  testFunctionDecl.cpp  testIfLogicOperators.cpp  testIfOperands.cpp  testIfOperator.cpp  testLoop.cpp  testLoopFast.cpp  testMisc.cpp  testNeuralNetLib.cpp  testOperationBasic.cpp  testOperationsExtended.cpp  testOperationsWithBrackets.cpp  testReadQfp32.cpp  testSyntax.cpp  testWhileLoop.cpp
SW/: peripherals  xorshift
VHDL/: m9k.vhd  mem.vhd  sl_cluster.vhd  sl_cluster_tb.vhd  sl_code_mem.vhd  sl_control.vhd  sl_core.vhd  sl_dec.vhd  sl_dec_ex.vhd  sl_dpram.vhd  sl_execute.vhd  sl_misc.vhd  sl_processor.vhd  sl_state.vhd  sl_structs_p.vhd
VHDL/cocotb/: wb_cache.py  wb_master.py  wb_memory.py
VHDL/quartus/: DE0_Nano.qsf  PinAssignment_DE0_Ext.csv  pll.vhd  sdram.qsys  sdram.sopcinfo  serv_req_info.txt  sl_processor.qpf  top.out.sdc  top.qsf  top.qws  top.sdc  top.vhd  top_assignment_defaults.qdf  top_assignments.csv  top_tb.vhd
VHDL/quartus/memclk/: memclk.bsf  memclk.cmp  memclk.csv  memclk.html  memclk.spd  memclk.xml  memclk_bb.v  memclk_generation.rpt  memclk_inst.v  memclk_inst.vhd
VHDL/quartus/memclk/simulation/: memclk.sip  memclk.vhd
VHDL/quartus/memclk/simulation/aldec/: rivierapro_setup.tcl
VHDL/quartus/memclk/simulation/cadence/: cds.lib  ncsim_setup.sh
VHDL/quartus/memclk/simulation/mentor/: msim_setup.tcl
VHDL/quartus/memclk/synthesis/: memclk.debuginfo
VHDL/quartus/sdram/: sdram.bsf  sdram.cmp  sdram.html  sdram.xml  sdram_bb.v  sdram_generation.rpt  sdram_generation_previous.rpt  sdram_inst.v  sdram_inst.vhd
VHDL/quartus/sdram/synthesis/: sdram.debuginfo  sdram.vhd
VHDL/quartus/sim/: top.mpf  wave.do
VHDL/sim/: sl_sim.mpf  test.vector  wave.do  wave2.do  wave_cluster.do  wave_cluster2.do
VHDL/sl_processor/: sl_cluster.vhd  sl_control.vhd  sl_dec_ex.vhd  sl_execute.vhd  sl_processor.vhd  sl_processor_tb.vhd  sl_structs_p.vhd
VHDL/sl_processor/testing/: CMakeLists.txt  run.py  test.py  wrapper.vhd
VHDL/test/: sl_test_tb.vhd
VHDL/testing/: testing_tb.vhd
VHDL/testing/sim/: testing.mpf  wave_cluster.do
VHDL/wishbone/: wb_cache.vhd  wb_cache_tb.vhd  wb_interconnect.vhd  wb_interconnect_tb.vhd  wb_ixs.vhd  wb_ixs_arbiter.vhd  wb_ixs_decode.vhd  wb_master.vhd  wb_master2.vhd  wb_mem.vhd  wb_test_p.vhd  wishbone_p.vhd
VHDL/wishbone/adapter/: wb_abp_bridge.vhd  wb_avalon_bridge.vhd  wb_cache_adapter.vhd
VHDL/wishbone/sim/: wave.do  wave_cache.do  wb_interconnect.cr.mti  wb_interconnect.mpf
VHDL/wishbone/testing/wb_cache/: CMakeLists.txt  run.py  test.py  wrapper.vhd
VHDL/wishbone/testing/wb_interconnect/: CMakeLists.txt  run.py  test.py  wrapper.vhd
VHDL/wm8731/: I2C_Master.vhd  wb_wm8731_slave.vhd  wb_wm8731_slave_tb.vhd  wm8731.vhd
VHDL/wm8731/sim/: wave.do  wm8731.mpf
VHDL/xorshift/: wb_xorshift_slave.vhd
VHDL/xorshift/sim/: xorshift.mpf
codeLite/: SLProcessor.workspace
codeLite/.codelite/: SLProcessor.tags  SLProcessor.workspace.malte  refactoring.db
codeLite/RTAsmTest/: RTAsmTest.project
codeLite/SLCompiler/: SLCompiler.project
codeLite/SLProcessor/: SLProcessor.project
codeLite/SLProcessorTest/: SLProcessorTest.mk  SLProcessorTest.project  SLProcessorTest.txt
codeLite/SLProcessorTest/Debug/: ProcessorTest_main.cpp.o.d  SLProcessorTest
docker/: Dockerfile  requirements.txt
testing/: CMakeLists.txt  main.cpp
testing/Asm/: Peripherals.h  RTAsmTest.h  nnet_resolved  tesIfThenElse.cpp  testAlloc.cpp  testArrayDecl.cpp  testAssignADx.cpp  testAssignment.cpp  testEntryFunctionVector.cpp  testFunction.cpp  testIfLogicOperators.cpp  testIfOperands.cpp  testIfOperator.cpp  testLoop.cpp  testLoopFast.cpp  testMisc.cpp  testNeuralNetLib.cpp  testOperationBasic.cpp  testOperationsExtended.cpp  testOperationsWithBrackets.cpp  testReadQfp32.cpp  testStruct.cpp  testSyntax.cpp  testWaitLock.cpp  testWhileLoop.cpp
testing/Instr/: SLProcessorTest.h  testBugs.cpp  testCacheBehaviour.cpp  testCmp.cpp  testGoto.cpp  testGotoAbs.cpp  testIRS.cpp  testLoad.cpp  testLoop.cpp  testMac.cpp  testMemXMov.cpp  testMemXOp.cpp  testMov.cpp  testOps.cpp  testUnaryOps.cpp
testing/Lib/: math  mem
(+6 files in other folders)
